Rebased existing changes that were lost when mergin conflicts

--- a/react_webviews/src/kyc/BankKyc/KycUploadDocuments.scss
+++ b/react_webviews/src/kyc/BankKyc/KycUploadDocuments.scss
@@ -40,7 +40,8 @@
 
   .subtitle {
     font-size: 13px;
-    color: #8d879b;
+    line-height: 21px;
+    color: var(--steelgrey);
     padding: 0 15px 0 0;
     margin-bottom: 10px;
   }
@@ -51,6 +52,8 @@
     align-items: center;
     line-height: 1.5;
     padding-bottom: 20px;
+    column-gap: 10px;
+    row-gap: 10px;
 
     .kyc-upload-doc-option-type {
       color: #160d2e;
@@ -138,8 +141,13 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    position: relative;
+    // position: relative;
     cursor: pointer;
+
+    .button-container {
+      margin-top: 10px;
+      width: 100%;
+    }
   }
 
   .upload-container svg {
