--- a/react_webviews/src/kyc/Journey/Journey.scss
+++ b/react_webviews/src/kyc/Journey/Journey.scss
@@ -7,9 +7,9 @@
 .kyc-journey .kyc-pj-content {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 50px;
   img {
     align-self: flex-start;
+    margin-left: 20px;
   }
 }
 
@@ -25,6 +25,7 @@
   margin-right: 30px;
 
   .icon {
+    margin: 0 10px 0 0;
     align-self: center;
   }
 }
@@ -37,7 +38,7 @@
   color: #0a1d32;
   font-size: 20px;
   font-weight: 600;
-  margin: 0 0 20px 0;
+  margin: 0 0 10px 0;
 
   .pj-sub-text {
     font-size: 13px;
@@ -67,7 +68,11 @@
 }
 
 .kyc-journey-subtitle {
-  margin-bottom: 20px;
+  margin: 20px 0;
+}
+
+.kyc-compliant-subtitle {
+  margin: 10px 0 20px 0;
 }
 
 .kyc-journey .alert-status-info {
@@ -75,14 +80,15 @@
 }
 
 .kyc-journey .steps-container {
-  margin-top: 40px;
+  margin-top: 20px;
+  margin-left: 10px;
 }
 
 .kyc-journey .steps-container .step {
   display: flex;
-  // align-items: center;
-  height: 60px;
-  padding-bottom: 14px;
+  flex-direction: column;
+  min-height: 60px;
+  padding-bottom: 15px;
   position: relative;
 }
 
@@ -122,7 +128,6 @@
 .kyc-journey .steps-container .step .title {
   margin-left: 40px;
   position: relative;
-  top: -13px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -154,10 +159,9 @@
 }
 
 .kyc-journey .steps-container .step .disc {
-  position: absolute;
-  top: 20px;
   margin-left: 40px;
   font-size: 13px;
+  margin-top: 10px;
 }
 
 .kyc-journey .steps-container .step .title__selected {
