--- a/react_webviews/src/kyc/Upload/commonStyles.scss
+++ b/react_webviews/src/kyc/Upload/commonStyles.scss
@@ -104,6 +104,8 @@
   .sub-title {
     margin-top: -10px;
     font-size: 13px;
+    line-height: 21px;
+    margin-bottom: 20px;
   }
 
   .pan-alert {
@@ -140,8 +142,9 @@
     font-size: 26px;
     line-height: 31px;
     letter-spacing: 7.5px;
-    color: #331c6b;
+    color: var(--primary);
     margin-top: 10px;
+    text-align: left;
   }
 
   [class^="video-recorder__Wrapper"] {
@@ -154,18 +157,19 @@
     margin-top: 40px;
 
     .upload-note {
-      flex-basis: 70%;
+      font-size: 13px;
+      line-height: 21px;
+      color: var(--dark);
+      text-align: left;
     }
 
-    .know_more {
-      font-size: 14px;
-      color: #160d2e;
-    }
-
-    .link {
+    .know-more-button {
       color: var(--secondary);
-      font-size: 10px;
-      margin: 5px 0 0;
+      font-size: 12px;
+      line-height: 14px;
+      font-weight: bold;
+      min-width: 112px;
+      text-align: right;
       cursor: pointer;
     }
   }
@@ -190,6 +194,11 @@
       letter-spacing: 1px;
     }
   }
+
+  .address-detail {
+    margin: 10px 0 30px 0;
+    color: var(--steelgrey);
+  }
 }
 
 .kyc-doc-upload-container {
@@ -197,6 +206,7 @@
   border: 1px dashed var(--skelton-color);
   border-radius: 6px;
   padding: 10px 0;
+  text-align: center;
 
   .kduc-sign-icon {
     width: 143px;
@@ -207,6 +217,10 @@
   .kduc-selfie-placeholder {
     width: 100%;
     display: block;
+  }
+
+  .video-controls {
+    max-width: 100%;
   }
 }
 
@@ -226,11 +240,14 @@
 }
 
 .kyc-doc-upload-container .preview {
-  display: block;
-  width: 100%;
-  object-fit: contain;
+  @include block-fit();
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
+  margin-top: 10px;
+}
+
+.kyc-doc-upload-container .default {
+  @include block-fit();
   margin-top: 10px;
 }
 
@@ -278,6 +295,31 @@
     font-size: 10px;
     font-weight: 800;
     margin-top: 5px;
+  }
+
+  .button-container {
+    padding: 0 10px;
+  }
+}
+
+.align-left {
+  text-align: left;
+}
+
+.kuc-sign-image-container {
+  position: relative;
+  border-radius: 6px;
+  background-color: white;
+  margin-bottom: 5px;
+
+  .kuc-sign-image {
+    height: 130px;
+    width: 152px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-bottom: 0;
   }
 }
 
