--- a/react_webviews/src/common/ui/YearFilter/WVYearFilterSheet.scss
+++ b/react_webviews/src/common/ui/YearFilter/WVYearFilterSheet.scss
@@ -17,7 +17,10 @@
      padding-top: 4px;
      border-radius: 4px;
    }
-
+   .disabled{
+     opacity: 0.6;
+     cursor: auto;
+   }
    .wvselected {
    color: white !important;
    background-color: var(--primary) !important;
