added ReactHtmlParser +  microtext to InvestCard

--- a/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
+++ b/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
@@ -65,6 +65,13 @@
         width: 128px;
       }
     }
+
+    .micro-text{
+      font-size: 8px;
+      line-height: 10px;
+      margin-top: -20px;
+    }
+
   }
 
   .bottom-scroll-cards {
