--- a/react_webviews/src/desktopLayout/DesktopLayout.scss
+++ b/react_webviews/src/desktopLayout/DesktopLayout.scss
@@ -16,6 +16,21 @@
     padding-bottom: 60px;
     overflow: auto;
     height: 100%;
+
+    ::-webkit-scrollbar-thumb {
+      background: #dbdbdb;
+      border-radius: 5px;
+    }
+
+    ::-webkit-scrollbar {
+      width: 10px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: #f1f1f1;
+      border-radius: 5px;
+    }
+    
     .ContainerWrapper {
       margin: 0px !important;
       max-width: 100% !important;
