--- a/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
+++ b/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
@@ -67,6 +67,7 @@
     }
 
     .micro-text{
+      color: var(--steelgrey);
       font-size: 8px;
       line-height: 10px;
       margin-top: -20px;
