--- a/react_webviews/src/kyc/mini-components/mini-components.scss
+++ b/react_webviews/src/kyc/mini-components/mini-components.scss
@@ -45,7 +45,7 @@
 .know-more-dialog-content {
   color: var(--dark);
   line-height: 1.5;
-  padding: 15px 0 10px 0;
+  padding-bottom: 10px;
 
   .title {
     font-size: 17px;
