--- a/react_webviews/src/dashboard/Invest/mini-components/mini-components.scss
+++ b/react_webviews/src/dashboard/Invest/mini-components/mini-components.scss
@@ -334,7 +334,7 @@
       margin: 20px 0;
     }
 
-    .bottom-info {
+    .vfdc-bottom-info {
       display: -ms-flexbox;
       display: flex;
       -ms-flex-align: center;
