Fixes WVFIS-1246 and buttonlayout empty buttonProps issue

--- a/react_webviews/src/common/theme/Style.css
+++ b/react_webviews/src/common/theme/Style.css
@@ -33,7 +33,7 @@ body[data-device="web"] .Header {
   margin: 0 auto;
 }
 body[data-device="web"] .Footer {
-  max-width: fit-content;
+  max-width: -moz-fit-content;
   position: relative !important;
   margin: 0 auto;
   margin-bottom: 20px;
