--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -74,6 +74,7 @@ body[data-device="web"] {
 
   .Footer {
     max-width: fit-content;
+    max-width: -moz-fit-content;
     position: relative !important;
     margin: 0 auto;
     margin-bottom: 20px;
