--- a/react_webviews/src/login_and_registration/Otp.scss
+++ b/react_webviews/src/login_and_registration/Otp.scss
@@ -45,3 +45,31 @@
 .verify-otp-container-secondary{
   padding: 0 !important
 }
+
+.login-form-field{
+  display: flex;
+  .country-code{
+    min-width: 85px;
+    margin-right: 15px;
+    .react-select__single-value{
+      margin-top: -3px !important;
+      color: var(--steelgrey);
+    }
+    .react-select__input{
+      margin-top: 0px !important;
+    }
+  }
+  
+  .mobile-number-login{
+    height: 52px;
+    background: rgba(238, 238, 238, 0.3);
+    width: 100%;
+    .MuiInputLabel-formControl{
+      left: 10px;
+      top: 4px;
+    }
+    .MuiInput-input{
+      margin-left: 10px;
+    }
+  }
+}
