--- a/react_webviews/src/common/theme/utils.scss
+++ b/react_webviews/src/common/theme/utils.scss
@@ -38,86 +38,90 @@
   justify-content: space-between;
 }
 
+.align-self-start {
+  align-self: flex-start;
+}
+
 .block {
   display: block;
 }
 
 .hero-banner-title {
-  color: #0A1D32;
+  color: var(--gunmetal);
   font-weight: 500;
   line-height: calc(26px * 1.3);
   font-size: 26px;
 }
 
 .heading1 {
-  color: #0A1D32;
+  color: var(--gunmetal);
   font-weight: bold;
   font-size: 20px;
   line-height: calc(20px * 1.6);
 }
 
 .heading2 {
-  color: #0A1D32;
+  color: var(--gunmetal);
   font-weight: bold;
   font-size: 17px;
   line-height: calc(17px * 1.6);
 }
 
 .heading3-bolder {
-  color: #0A1D32;
+  color: var(--gunmetal);
   font-weight: bold;
   font-size:  15px;
   line-height: calc(15px * 1.6);
 }
 
 .heading3-medium {
-  color: #0A1D32;
+  color: var(--gunmetal);
   font-weight: 500;
   font-size: 15px;
   line-height: calc(15px * 1.6);
 }
 
 .body-text1 {
-  color: #0A1D32;
+  color: var(--gunmetal);
   font-weight: 500;
   font-size: 13px;
   line-height: calc(13px * 1.6);
 }
 
 .body-text2 {
-  color: #0A1D32;
+  color: var(--gunmetal);
   font-size: 13px;
   line-height: calc(13px * 1.6);
 }
 
 .helping-text {
-  color: #0A1D32;
+  color: var(--gunmetal);
   font-size: 11px;
   line-height: calc(11px * 1.6);
 }
 
 .small-text1 {
-  color: #0A1D32;
+  color: var(--gunmetal);
   font-size: 10px;
   font-weight: 500;
   line-height: calc(10px * 1.6);
 }
 
 .small-text2 {
-  color: #0A1D32;
+  color: var(--gunmetal);
   font-size: 10px;
   line-height: calc(10px * 1.6);
 }
 
 .micro1 {
-  color: #0A1D32;
+  color: var(--gunmetal);
   font-size: 8px;
   font-weight: 500;
   line-height: calc(10px * 1.6);
 }
 
 .micro2 {
-  color: #0A1D32;
+  color: var(--gunmetal);
   font-size: 8px;
   line-height: calc(10px * 1.6);
 }
