added steps router for DIY flow

--- a/react_webviews/src/common/theme/utils.scss
+++ b/react_webviews/src/common/theme/utils.scss
@@ -150,6 +150,10 @@
   margin-top: calc(var(--spacing) * 2);
 }
 
+.m-top-3x {
+  margin-top: calc(var(--spacing) * 3);
+}
+
 .pd-2x {
   padding: calc(var(--spacing) * 2);
 }
