clearned styles for redirection

--- a/react_webviews/src/tax_filing/pages/Redirection.scss
+++ b/react_webviews/src/tax_filing/pages/Redirection.scss
@@ -1,5 +1,10 @@
-.tax-filing-full-height {
-  height: 100%;
+.tax-filing-redirection {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding: 0 calc(var(--spacing) * 2);
 }
 
 .tax-bottom-pd-20-important {
