--- a/react_webviews/src/common/theme/utils.scss
+++ b/react_webviews/src/common/theme/utils.scss
@@ -174,6 +174,10 @@
   margin-top: calc(var(--spacing) * 3);
 }
 
+.m-bottom-4x {
+  margin-bottom: calc(var(--spacing) * 4);
+}
+
 .pd-2x {
   padding: calc(var(--spacing) * 2);
 }
