details card customization for t2win

--- a/react_webviews/src/tax_filing/pages/MyITR.scss
+++ b/react_webviews/src/tax_filing/pages/MyITR.scss
@@ -2,12 +2,12 @@
   margin: 0;
 }
 
-.tax-filing-my-itr .info-title {
-  font-size: 10px;
+.tax-filing-my-itr .card-bottom-info .individual-card-info .info-subtitle {
+  font-size: 11px;
   line-height: calc(10px * 1.6);
 }
 
-.tax-filing-my-itr .info-subtitle {
-  font-size: 11px;
-  line-height: calc(11px * 1.6);
+.tax-filing-my-itr .info-title {
+  font-size: 10px;
+  line-height: calc(10px * 1.6);
 }
