added margins usin variables css

--- a/react_webviews/src/tax_filing/pages/MyITR.scss
+++ b/react_webviews/src/tax_filing/pages/MyITR.scss
@@ -1,5 +1,6 @@
 .tax-filing-my-itr .details-card-container {
   margin: 0;
+  margin-top: calc(var(--spacing) * 3);
 }
 
 .tax-filing-my-itr .card-bottom-info .individual-card-info .info-subtitle {
