--- a/react_webviews/src/common/theme/utils.scss
+++ b/react_webviews/src/common/theme/utils.scss
@@ -174,6 +174,10 @@
   margin-top: calc(var(--spacing) * 3);
 }
 
+.m-top-4x {
+  margin-top: calc(var(--spacing) * 4);
+}
+
 .m-bottom-4x {
   margin-bottom: calc(var(--spacing) * 4);
 }
@@ -204,4 +208,8 @@
 
 .pointer {
   cursor: pointer;
+}
+
+.uppercase {
+  text-transform: uppercase;
 }
