--- a/react_webviews/src/tax_filing/pages/PersonalDetails.scss
+++ b/react_webviews/src/tax_filing/pages/PersonalDetails.scss
@@ -15,13 +15,16 @@
   background: rgba(238, 238, 238, 0.3);
   padding: 5px 0px 0px 0px;
   margin-top: calc(var(--spacing) * 3);
-  // border-bottom: 1px solid var(--gunmetal);
 }
-
-// .tax-filing-details .MuiInput-underline::before,
-// .tax-filing-details .MuiInput-underline::after {
-// }
 
 .tax-filing-details .MuiInput-focused {
   outline: 0;
+}
+
+.tax-filing-details .MuiFormHelperText-root {
+  min-height: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  background-color: #fff;
+  padding-top: 8px;
 }
