--- a/react_webviews/src/dashboard/Invest/mini-components/mini-components.scss
+++ b/react_webviews/src/dashboard/Invest/mini-components/mini-components.scss
@@ -207,8 +207,9 @@
         min-height: 60px;
         margin-right: 20px;
   
-        img {
+        .invest-type-icon {
           width: 100%;
+          min-height: 150px;
         }
   
         .text {
