--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -140,9 +140,9 @@ body[data-device="web"] {
   }
 
   .Loader {
-    // max-width: var(--desktop-width);
-    width: 100%;
-    margin: 0 auto;
+    max-width: var(--desktop-width);
+    // width: 100%;
+    margin: 0 auto 0 300px;
     top: 60px;
   }
 
