--- a/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
+++ b/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
@@ -61,8 +61,9 @@
 
     .image-wrapper {
       flex: 3;
-      img {
+      .invest-card-icon {
         width: 128px;
+        height: 128px !important;
       }
     }
   }
@@ -101,7 +102,8 @@
         column-gap: 15px;
 
         .icon {
-          width: 140px;
+          width: 140px !important;
+          height: 100px !important;
         }
 
         img {
@@ -163,6 +165,11 @@
 
     .invest-landing-button {
       border: 2px solid var(--secondary) !important;
+    }
+
+    .ft-icon {
+      width: 65px !important;
+      height: 65px !important;
     }
   }
 
