added the styling for the sliding bottom sheet, added the right image

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -218,9 +218,9 @@ body[data-device="web"] {
       }
     }
 
-    .success-bottom {
+    .success-bottom, .esign-bottom {
       position: fixed;
-      bottom: 80px;
+      bottom: 60px;
       left: 50%;
       transform: translateX(-50%);
     }
