--- a/react_webviews/src/dashboard/DIY/components/Search.scss
+++ b/react_webviews/src/dashboard/DIY/components/Search.scss
@@ -110,6 +110,7 @@
   }
 }
 
+
 .diy-search-mob{
   background-color: white;
   .diy-iframe-search-input{
@@ -124,5 +125,18 @@
 
   .search-loader {
     margin-top: 40px;
+  }
+}
+
+.diy-iframe-search-content {
+  width: 100%;
+  height: 60vh;
+  display: grid;
+  place-items: center;
+
+  img {
+    min-width: 400px;
+    width:100%;
+    max-width: 500px;
   }
 }
