--- a/react_webviews/src/desktopLayout/DesktopLayout.scss
+++ b/react_webviews/src/desktopLayout/DesktopLayout.scss
@@ -107,6 +107,10 @@
       }
     }
   }
+
+  #kyc-bank-verification-dialog .MuiDialog-paper{
+    bottom: unset !important;
+  }
 }
 
 @media only screen and (max-width: 500px) {
