added default props journey card

--- a/react_webviews/src/tax_filing/mini-components/FeatureListItem.scss
+++ b/react_webviews/src/tax_filing/mini-components/FeatureListItem.scss
@@ -1,5 +1,6 @@
-.tax-filing-feature-icn-container {  
+.tax-filing-feature-icn-container {
   width: 70px;
   max-width: 70px;
   height: 60px;
+  border-radius: 4px;
 }
