Fixed image loding in login screens

--- a/react_webviews/src/login_and_registration/Style.scss
+++ b/react_webviews/src/login_and_registration/Style.scss
@@ -36,6 +36,11 @@
       padding: 0 20px;
     }
 
+    .login-left-icon {
+      min-width: 480px;
+      min-height: 330px;
+    }
+
     .login-form {
       background-color: #ffffff;
       width: 380px;
