Fixed login screens font weight

--- a/react_webviews/src/login_and_registration/Style.scss
+++ b/react_webviews/src/login_and_registration/Style.scss
@@ -46,7 +46,7 @@
       width: 380px;
 
       .header-text {
-        font-weight: bold;
+        font-weight: 500;
         font-size: 20px;
         line-height: 24px;
         text-align: center;
@@ -203,7 +203,7 @@
       }
 
       .footer {
-        font-weight: bold;
+        font-weight: 500;
         font-size: 14px;
         line-height: 17px;
         margin-top: 40px;
