added support for events

--- a/react_webviews/src/tax_filing/pages/MyITR.scss
+++ b/react_webviews/src/tax_filing/pages/MyITR.scss
@@ -12,3 +12,11 @@
   font-size: 10px;
   line-height: calc(10px * 1.6);
 }
+
+.tax-filing-my-itr
+  .details-card-container
+  .card-bottom-info
+  .individual-card-info
+  .info-title {
+  margin-bottom: 0;
+}
