Fixed data redirection dialog page on reload and message css

--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -376,3 +376,12 @@
 }
 
 ///////////// SAMPLE DOCUMENTS END //////////////
+
+.kyc-dialog-page-message {
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 21px;
+  letter-spacing: 0px;
+  color: var(--steelgrey);
+  margin-top: 6em;
+}
