Fixed title and subtitle in kyc home

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -276,7 +276,7 @@ body[data-device="web"] {
     .fadein-animation{
       margin-top: 20px;
       flex: 1 1 55%;
-      overflow: hidden;
+      // overflow: hidden;
       // padding-bottom: 100px;
       min-width: 420px;
       .diy-tab-container{
