Added finity assets and css fixes

--- a/react_webviews/src/dashboard/DIY/mini-components/mini-components.scss
+++ b/react_webviews/src/dashboard/DIY/mini-components/mini-components.scss
@@ -62,6 +62,7 @@
 .diy-fund-card-info-container {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
   margin-top: 10px;
 
   .diy-fund-card-info {
