--- a/react_webviews/src/kyc/BankKyc/KycUploadDocuments.scss
+++ b/react_webviews/src/kyc/BankKyc/KycUploadDocuments.scss
@@ -2,7 +2,7 @@
   .banner {
     padding: 20px;
     margin: 20px 0;
-    background-color: #f6f2ff;
+    background-color: var(--highlight);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -115,7 +115,7 @@
     justify-content: center;
     align-items: center;
     padding: 15px;
-    background: #f6f2ff;
+    background: var(--highlight);
   }
 
   .sign-img {
