updating build and font fix

--- a/react_webviews/src/tax_filing/pages/Landing.scss
+++ b/react_webviews/src/tax_filing/pages/Landing.scss
@@ -21,3 +21,10 @@
 .tax-filing-faq-icon-text {
   color: var(--primary);
 }
+
+
+.tax-filing-landing .wv-menulist-products .wv-menu-list-dropdown .wv-menu-title {
+  font-weight: 600;
+  color: var(--gunmetal);
+  font-size: 15px;
+}
