--- a/react_webviews/src/common/ui/MenuListDropdown/WVMenuListDropdown.scss
+++ b/react_webviews/src/common/ui/MenuListDropdown/WVMenuListDropdown.scss
@@ -37,12 +37,12 @@
       cursor: pointer;
     }
     .wv-menu-title {
-      color: var(--gunmetal);
-      font-size: 15px;
+      color: var(--dark);
+      font-size: 16px;
       margin-bottom: 5px;
       // margin-left: 25px;
       line-height: 24px;
-      font-weight: 600;
+      font-weight: 500;
       flex-grow: 1;
     }
     .wv-menu-subtitle {
