QA-4492 wv-security-disclaimer text color changed to steelgray

--- a/react_webviews/src/common/ui/SecurityDisclaimer/WVSecurityDisclaimer.scss
+++ b/react_webviews/src/common/ui/SecurityDisclaimer/WVSecurityDisclaimer.scss
@@ -6,7 +6,7 @@
   span {
     font-size: 13px;
     line-height: 15px;
-    color: var(--dark);
+    color: var(--steelgrey);
   }
 
   .wv-sd-images {
