--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -111,6 +111,8 @@ body[data-device="web"] {
       max-width: 100%;
     }
     .nfo-checkout{
+      padding: 0 20px;
+      
       .checkout-invest-type{
         background-color: white !important;
 
@@ -118,6 +120,10 @@ body[data-device="web"] {
           box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
         }
       }
+    }
+
+    .invest-journey-container {
+      padding: 20px 10px 0 25px;
     }
 
     .diy-search{
@@ -184,7 +190,7 @@ body[data-device="web"] {
 
     .kyc-esign-complete{
       header{
-        margin-top: 120px;
+        margin-top: 40px;
       }
       .text {
         text-align: left;
@@ -202,6 +208,7 @@ body[data-device="web"] {
         text-align: left;
         color: #767E86;
         margin-top: 125px;
+        margin-bottom: 30px;
         span{
           font-size: 13px;
           font-weight: 500;
@@ -218,22 +225,11 @@ body[data-device="web"] {
       }
     }
 
-    .success-bottom, .esign-bottom {
+    .esign-bottom {
       position: fixed;
       bottom: 60px;
       left: 50%;
       transform: translateX(-50%);
-    }
-
-    .kyc-report{
-      main{
-        .congrats,.text,.text.message{
-          text-align: left;
-        }
-        .text.message{
-          justify-content: left;
-        }
-      }
     }
 
     .account-merge-linked{
