--- a/react_webviews/src/kyc/Compliant/commonStyles.scss
+++ b/react_webviews/src/kyc/Compliant/commonStyles.scss
@@ -47,19 +47,20 @@
     text-align: center;
 
     img {
-      margin: 40px 0;
+      margin-top: 40px;
     }
 
     .title {
       font-size: 15px;
       color: #160d2e;
       font-weight: 700;
+      margin-top: 40px;
     }
 
     .subtitle {
       font-size: 14px;
       font-weight: 400;
-      color: #4f2da7;
+      color: var(--primary);
       margin: 30px 0 0 0;
       cursor: pointer;
     }
