--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -56,12 +56,13 @@
     .img {
       width: 100%;
       margin: 20px 0 10px 0;
+      min-height: 200px;
     }
 
     .congrats {
       font-size: 14px;
       color: #160d2e;
-      font-weight: 700;
+      font-weight: 500;
       text-align: center;
     }
 
