Moved popupWindowCenter to utils functions

--- a/react_webviews/src/dashboard/Invest/components/SipPaymentCallback/SipPaymentCallback.scss
+++ b/react_webviews/src/dashboard/Invest/components/SipPaymentCallback/SipPaymentCallback.scss
@@ -1,6 +1,7 @@
 .invest-sip-payment-callback {
   color: #333333;
   line-height: 1.5;
+  padding-bottom: 30px;
 
   .content {
     text-align: center;
