--- a/react_webviews/src/dashboard/Invest/components/PaymentCallback/PaymentCallback.scss
+++ b/react_webviews/src/dashboard/Invest/components/PaymentCallback/PaymentCallback.scss
@@ -19,7 +19,7 @@
       font-size: 22px;
       margin: 0;
       line-height: 1.1;
-      font-weight: 800;
+      font-weight: 600;
     }
 
     .error-title {
@@ -31,13 +31,13 @@
       margin: 0;
       padding-top: 10px;
       color: #4a4a4a;
-      font-size: 18px;
+      font-size: 16px;
     }
 
     .message {
       display: flex;
       align-items: flex-start;
-      font-size: 16px;
+      font-size: 14px;
       margin-top: 20px;
       color: #878787;
       padding-bottom: 15px;
@@ -49,7 +49,40 @@
       }
 
       span {
-        font-weight: 700;
+        font-weight: 600;
+      }
+    }
+
+    .important-message{
+      margin-top: 30px;
+      display: flex;
+      align-items: flex-start;
+      padding: 14px 19px 17px 15px;
+      background-color: var(--highlight);
+      border-radius: 4px;
+      text-align: left;
+
+      .info-icon {
+        margin-right: 12px;
+      }
+
+      .info-msg{
+        .info-head{
+          font-weight: 700;
+          font-size: 13px;
+          line-height: 15px;
+          margin-bottom: 10px;
+        }
+        .info-msg-content{
+          font-size: 13px;
+          color: #767E86;
+          font-weight: 400;
+          line-height: 21px;
+  
+          span{
+            font-weight: 700;
+          }
+        }
       }
     }
   }
