--- a/react_webviews/src/dashboard/Invest/components/SipPaymentCallback/SipPaymentCallback.scss
+++ b/react_webviews/src/dashboard/Invest/components/SipPaymentCallback/SipPaymentCallback.scss
@@ -50,8 +50,10 @@
     display: flex;
     align-items: flex-start;
     padding: 14px 19px 17px 15px;
-    background-color: #F0F7FF;
+    background-color: var(--highlight);
     border-radius: 4px;
+    text-align: left;
+    
     .info-icon {
       margin-right: 12px;
     }
