--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -115,10 +115,10 @@ body[data-device="web"] {
 
       .checkout-invest-type{
         background-color: white !important;
+      }
 
-        div#onetime {
-          box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.1);
-        }
+      .cart-items .item {
+        margin: 0 0 15px 0;
       }
     }
 
@@ -244,6 +244,10 @@ body[data-device="web"] {
       .content .message {
         justify-content: flex-start;
       }
+    }
+
+    .sip-dates {
+      padding-left: 5px;
     }
 
     .invest-sip-payment-callback{
