--- a/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
+++ b/react_webviews/src/dashboard/Invest/components/Landing/Landing.scss
@@ -66,9 +66,9 @@
       }
     }
 
-    .micro-text{
+   .below-card-description {
       color: var(--steelgrey);
-      font-size: 8px;
+      font-size: 11px;
       line-height: 10px;
       margin-top: -20px;
     }
