Fixed sip payment back handling and login css

--- a/react_webviews/src/login_and_registration/Style.scss
+++ b/react_webviews/src/login_and_registration/Style.scss
@@ -86,21 +86,11 @@
           .country-code {
             width: fit-content;
             margin-bottom: -20px;
-
-            .MuiSelect-root {
-              margin-bottom: 1px;
-            }
           }
 
           .input {
             width: 100%;
           }
-
-          // .mobile-number {
-          //   .MuiInput-underline:before {
-          //     margin-bottom: 1px;
-          //   }
-          // }
         }
 
         .referral-code-input {
@@ -380,6 +370,12 @@
 
           .underline {
             margin: 5px 0;
+          }
+
+        }
+        .country-code {
+          .MuiSelect-root {
+            margin-bottom: 1px;
           }
         }
       }
