term maintenance screen

--- a/react_webviews/src/group_insurance/common/Style.scss
+++ b/react_webviews/src/group_insurance/common/Style.scss
@@ -2051,3 +2051,10 @@
   height: 20px !important;
   margin: 0;
 }
+
+.system-maintainence{
+  display: grid;
+  place-items: center;
+  margin-top: 50px;
+  height: 230px;
+}
