imgc margin fix menulist

--- a/react_webviews/src/common/ui/MenuListDropdown/WVMenuListDropdown.scss
+++ b/react_webviews/src/common/ui/MenuListDropdown/WVMenuListDropdown.scss
@@ -13,8 +13,7 @@
       .wv-image-icon{
         width: 50px;
         min-height: 40px;
-        padding-top: 20px;
-        padding-bottom: 20px;
+        margin: 20px 0px 20px 0px;
       }
       .wv-image-icon-small{
         margin: 20px 0px 0px 3px;
