Fixed moneycontrol & bfdl desktop layout conditions and css

--- a/react_webviews/src/dashboard/Invest/components/InvestGoal/GoalTarget.scss
+++ b/react_webviews/src/dashboard/Invest/components/InvestGoal/GoalTarget.scss
@@ -42,7 +42,7 @@
 
 .invest-goal-set-target{
   text-align: center;
-  color:#35cb5d;
+  color: var(--secondary);
   font-size: 16px;
   margin-top: 50px;
   cursor: pointer;
