--- a/react_webviews/src/dashboard/Invest/components/NFO/Scheme.scss
+++ b/react_webviews/src/dashboard/Invest/components/NFO/Scheme.scss
@@ -1,4 +1,4 @@
-.nfo-scheme {
+.invest-nfo-scheme {
   .info {
     margin: 0;
     background: white;
@@ -8,6 +8,7 @@
     .content {
       cursor: pointer;
       background: #fafafa;
+      justify-content: space-between;
 
       img {
         margin: 0;
