--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -40,6 +40,10 @@ button {
   font-family: "Rubik", "Roboto", sans-serif;
 }
 
+body.IframeBody #root {
+  background: #fff;
+}
+
 body[data-device="web"] {
   height: 100%;
   
@@ -83,7 +87,25 @@ body[data-device="web"] {
     margin-bottom: 20px;
   }
 
-  .ContainerWrapper {
+  ::-webkit-scrollbar-thumb {
+    background: #dbdbdb;
+    border-radius: 5px;
+  }
+
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 5px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: #c4c4c4; 
+  }
+
+  .ContainerWrapper, .bfdlContainerWrapper {
     max-width: var(--desktop-width);
     margin: 0 auto;
     padding-bottom: 3px;
@@ -325,6 +347,25 @@ body[data-device="web"] {
   }
 ////////////End of Iframe Css /////////////////
 
+/////////// BFDL Container Css Start///////////////
+
+  .bfdlContainerWrapper {
+    // padding: 20px 20px 50px 20px;
+    max-width: 100%;
+    height: 100%;
+    background-color: #fff;
+
+    .Header, .Step {
+      max-width: 100%;
+    }
+
+    .recommendations-disclaimer .tc_link {
+      color: var(--secondary);
+    }
+  }
+
+/////////// BFDL Container Css End ///////////////
+
   .Step {
     max-width: var(--desktop-width);
     margin: 0 auto;
@@ -420,7 +461,20 @@ body[data-device="web"] {
   cursor: pointer;
 }
 
+body.IframeBody {
+  .Loader {
+    max-width: 100%;
+    margin: 0 auto;
+  }
+}
 
+.bfdlContainerWrapper {
+  background: #fff;
+  
+  .recommendations-disclaimer .tc_link {
+    color: var(--secondary);
+  }
+}
 
 
 .fadein-animation {
