--- a/react_webviews/src/dashboard/Recommendation/Recommendation.scss
+++ b/react_webviews/src/dashboard/Recommendation/Recommendation.scss
@@ -89,6 +89,7 @@
 .recommendations-disclaimer {
   display: flex;
   flex-direction: column;
+  color: var(--steelgrey);
   .recommendations-disclaimer-tc {
     a {
       color: #337ab7;
