--- a/react_webviews/src/common/theme/utils.scss
+++ b/react_webviews/src/common/theme/utils.scss
@@ -14,6 +14,10 @@
   align-items: center;
 }
 
+.vertical-align-baseline {
+  vertical-align: baseline;
+}
+
 .align-end {
   align-items: flex-end;
 }
