--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -590,6 +590,10 @@ body[data-device="mobile"] {
   .__react_component_tooltip.show {
     opacity: 1;
    }
+
+   .generic-page-loader {
+     top: 0px;
+   }
 }
 
 .generic-render-benefits {
