added fixes for design comments.

--- a/react_webviews/src/common/theme/utils.scss
+++ b/react_webviews/src/common/theme/utils.scss
@@ -162,6 +162,10 @@
   display: inline-block;
 }
 
+.m-left-1x {
+  margin-left: var(--spacing)
+}
+
 .m-left-2x {
   margin-left: calc(var(--spacing) * 2);
 }
