--- a/react_webviews/src/dashboard/Invest/components/Explore/FundType.scss
+++ b/react_webviews/src/dashboard/Invest/components/Explore/FundType.scss
@@ -69,6 +69,7 @@
     min-height: 36px;
     width: 90px !important;
     font-size: 14px !important;
+    padding: 5px !important;
   }
 
   .stats .desc {
