--- a/react_webviews/src/withdraw/components/WithdrawReason/WithdrawReason.scss
+++ b/react_webviews/src/withdraw/components/WithdrawReason/WithdrawReason.scss
@@ -3,9 +3,8 @@
   .withdraw-reason-title{
     padding: 20px;
     font-size: 17px;
-    color: black;
+    color: var(--dark);
     background: #f2f2f2;
-    font-weight: 500;
     line-height: 1.4;
   }
 }
@@ -18,5 +17,6 @@
     padding: 15px;
     font-size: 16px;
     cursor: pointer;
+    color: var(--default);
   }
 }
