--- a/react_webviews/src/tax_filing/pages/PersonalDetails.scss
+++ b/react_webviews/src/tax_filing/pages/PersonalDetails.scss
@@ -29,3 +29,15 @@
   padding-top: 8px;
   padding-left: 10px;
 }
+
+.tax-filing-details .MuiInputLabel-formControl {
+  position: absolute;
+}
+
+.tax-filing-details .MuiInputLabel-formControl[data-shrink='false'] {
+  transform: translate(0, 18px) scale(1);
+}
+
+.tax-filing-details .MuiInputLabel-formControl[data-shrink='true'] {
+  top: 5px;
+}
