Fixed bank list footer condition, my account & page loader css

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -473,6 +473,10 @@ body.IframeBody {
 
 .bfdlContainerWrapper {
   background: #fff;
+
+  .generic-page-loader {
+    top: 0px !important;
+  }
   
   .recommendations-disclaimer .tc_link,
   .reports .reports-header .summary-green-text {
