--- a/react_webviews/src/dashboard/MyAccount/MyAccount.scss
+++ b/react_webviews/src/dashboard/MyAccount/MyAccount.scss
@@ -12,8 +12,8 @@
 
       .account-head-title {
         padding: 20px 10px 10px 20px;
-        font-weight: 900;
-        color: #4a4a4a;
+        font-weight: 600;
+        color: var(--default);
         font-size: 16px;
       }
 
