--- a/react_webviews/src/payment/components/Style.scss
+++ b/react_webviews/src/payment/components/Style.scss
@@ -251,7 +251,7 @@
     
     .add-button button, .footer button, .upi-button button {
       width: 100%;
-      background: #35cb5d;
+      background: var(--secondary);
       border-radius: 5px;
       padding: 15px;
       border: 0;
@@ -259,6 +259,10 @@
       font-size: 12px;
       text-transform: uppercase;
       font-weight: bold;
+    }
+
+    .add-button button:hover, .upi-button button.active:hover{
+      background-color: var(--on-hover);
     }
     
     .add-button button.bfdl, .footer button.bfdl, .upi-button button.bfdl {
@@ -276,7 +280,7 @@
     }
     
     .upi-button button.active {
-      background: #35cb5d;
+      background: var(--secondary);
     }
     
     .upi-button button.active.bfdl {
