--- a/react_webviews/src/dashboard/nps/style.scss
+++ b/react_webviews/src/dashboard/nps/style.scss
@@ -25,7 +25,7 @@
         .title {
           font-size: 18px;
           color: #160d2e;
-          font-weight: 700;
+          font-weight: 500;
           margin-bottom: 10px;
         }
 
@@ -258,6 +258,10 @@
   // box-shadow: 0pt 0pt 4pt 1pt rgba(0, 0, 0, 0.05);
   border: 1px solid #e8e8e8;
   border-radius: 5px;
+
+  b {
+    font-weight: 500;
+  }
 
   .risk {
     padding: 15px;
