Fixed product name and action cta padding

--- a/react_webviews/src/payment/components/Style.scss
+++ b/react_webviews/src/payment/components/Style.scss
@@ -1012,20 +1012,35 @@ body[data-device="web"] {
   padding: 14px 14px 0;
 }
 
-.po-ippb-disclaimer-title {
-  padding-bottom: 10px !important;
-}
+.po-ippb-disclaimer {
+  .po-ippb-disclaimer-title {
+    padding-bottom: 10px !important;
+  }
+  
+  .po-ippb-disclaimer-content {
+    p {
+      padding: 10px 0;
+      font-size: 14px;
+      color: var(--label);
+      margin: 0;
+  
+      b {
+        font-weight: 600;
+        color: var(--default);
+      }
 
-.po-ippb-disclaimer-content {
-  p {
-    padding: 10px 0;
-    font-size: 14px;
-    color: var(--label);
-    margin: 0;
+      .text-transform-uppercase {
+        text-transform: uppercase;
+      }
 
-    span {
-      font-weight: 600;
-      color: var(--default);
+      .text-transform-capitalize {
+        text-transform: capitalize;
+      }
     }
+  }
+
+  .po-ippb-disclaimer-actions {
+    margin: 0;
+    padding: 10px 20px;
   }
 }
