--- a/react_webviews/src/login_and_registration/Style.scss
+++ b/react_webviews/src/login_and_registration/Style.scss
@@ -91,10 +91,6 @@
           .country-code {
             width: fit-content;
             margin-bottom: -20px;
-
-            .MuiSelect-root {
-              margin-bottom: 1px;
-            }
           }
 
           .input {
@@ -385,6 +381,12 @@
 
           .underline {
             margin: 5px 0;
+          }
+        }
+
+        .form-field .country-code {
+          .MuiSelect-root {
+            margin-bottom: 1px;
           }
         }
       }
