handled image flicker on low latency networks

--- a/react_webviews/src/tax_filing/pages/Landing.scss
+++ b/react_webviews/src/tax_filing/pages/Landing.scss
@@ -34,3 +34,9 @@
 .tax-filing-landing-features {
   margin-top: 60px;
 }
+
+.tax-filing-landing .my-itr-icon {
+  display: block;
+  width: 30px;
+  height: 30px;
+}
