--- a/react_webviews/src/common/ui/ListItem/WVListItem.scss
+++ b/react_webviews/src/common/ui/ListItem/WVListItem.scss
@@ -1,6 +1,9 @@
 .wv-list-item-icon {
   margin-right: 25px;
   align-self: flex-start;
+  display: block;
+  width: 30px;
+  height: 30px;
 }
 
 .wv-list-item-ruler {
