added LoginContainer + 2fa login screen Update

--- a/react_webviews/src/kyc/Equity/mini-components/mini-components.scss
+++ b/react_webviews/src/kyc/Equity/mini-components/mini-components.scss
@@ -41,6 +41,16 @@
 }
 
 .communication-details-otp-container {
+  .otp-error-style {
+    border-bottom: 1px solid var(--red) !important;
+  }
+  .invalid-otp{
+    color: var(--red);
+    margin-bottom: 25px;
+    font-size: 11px;
+    line-height: 18px;
+    margin-top: 5px;
+  }
   .cd-otp-time-text {
     color: var(--steelgrey);
     font-size: 13px;
