help and support

--- a/react_webviews/src/payment/components/Style.scss
+++ b/react_webviews/src/payment/components/Style.scss
@@ -322,7 +322,7 @@
       font-size: 12px;
       font-weight: bold;
       line-height: 14px;
-      color: #35CB5D;
+      color: var(--secondary);
       cursor: pointer;
     }
     
